# deletion-helper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  delete_images.py  pre-commit-config.yaml  pyproject.toml  test_delete_images.py
.github/actions/install-dependencies/: action.yml
.github/workflows/: bundle-action.yml  continuous-integration.yml  install-dependencies.yml
deletion_helper/: deletion_helper.py
scripts/: bundle.sh
test_deletion_helper/: test_deletion_helper.py
