[tool.poetry]
name = "deletion_helper"
version = "0.1.0"
description = "A CLI tool written in python that deletes all files with a specified filetype in a given folder recursively"
authors = ["Peter Trost <p.trost93@gmail.com>"]
readme = "README.md"
packages = [{include = "deletion_helper"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
click = "^8.1.5"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.278"
pre-commit = "^3.3.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"


[tool.poetry.group.build.dependencies]
pyinstaller = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=deletion_helper --cov-fail-under=100 --cov-report=html"
